# ex_poppy

./: .gitignore  .gitmodules  LICENSE  README.md  mix.exs
.github/workflows/: release.yml  test.yml
lib/: ex_poppy.ex  poppy_plug.ex  poppy_server.ex
lib/ex_poppy/: native.ex
native/ex_poppy/: Cargo.toml  README.md
native/ex_poppy/src/: lib.rs
test/: ex_poppy_test.exs  test.bloom
