[package]
name = "ex_poppy"
version = "0.1.4"
authors = ["Quentin Jérôme", "Jean-Louis Huynen"]
edition = "2021"

[lib]
name = "ex_poppy"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
poppy = { version = "0.2.0", package = "poppy-filters"}
rustler = { version = "0.29", default-features = false, features = ["derive", "nif_version_2_15"] }
thiserror = "1.0.58"
