[package]
name = "ex_poppy"
version = "0.2.1"
authors = ["Quentin Jérôme", "Jean-Louis Huynen"]
edition = "2025"

[lib]
name = "ex_poppy"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
poppy = { version = "0.2.1", package = "poppy-filters"}
rustler = { version = "0.36", default-features = false, features = ["derive", "nif_version_2_15"] }
thiserror = "1.0.58"
